--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,6 +2,7 @@
     <form class="col-sm-offset-4 col-sm-4 form-horizontal" role="form" method="post">
         <fieldset>
             <legend>用户登录</legend>
+            {{{ message}}}
             <div class="form-group">
                 <label class="col-sm-3 control-label" for="username">用户名</label>
                 <div class="col-sm-9">
